# maya_scripts_plugins

./: README.md
crushgame/: crushgame_base_aiToon.py  crushgame_base_logic.py
geom_info/: CMakeLists.txt  usage_geom_info.py
geom_info/src/: CMakeLists.txt  CurveInfo.cpp  CurveInfo.h  PolygonInfo.cpp  PolygonInfo.h  SurfaceInfo.cpp  SurfaceInfo.h  pluginMain.cpp  util.h
gerstner_wave/: CMakeLists.txt  usage_gerstner_wave.py
gerstner_wave/src/: CMakeLists.txt  gerstnerWaveCmd.cpp  gerstnerWaveCmd.h  gerstnerWaveNode.cpp  gerstnerWaveNode.h  pluginMain.cpp
pinwheel/: pinwheel4.py  pinwheel5.py  pinwheel_anim_viewport.py  pinwheel_util.py
teapot/: CMakeLists.txt  usage_teapot.py
teapot/src/: CMakeLists.txt  nurbsTeapot.cpp  nurbsTeapot.h  pluginMain.cpp  polyTeapot.cpp  polyTeapot.h  teapot.h
torusknot/: CMakeLists.txt  usage_tk_nurbs.mel  usage_tk_poly.py
torusknot/src/: CMakeLists.txt  inclMFnPluginClass.h  paramCurveEqSampler.cpp  paramCurveEqSampler.h  pluginMain.cpp  tkBezierCurve.cpp  tkBezierCurve.h  tkParamCurveEqSampler.cpp  tkParamCurveEqSampler.h  tridiagLinAlg.h
